--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,3 +1,22 @@
-@theme {
-  --font-display: "Inter", "sans-serif";
+@import "tailwindcss";
+@plugin "daisyui";
+
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark, cupcake;
+}
+
+@utility container {
+  padding: 2rem;
+
+  @media (min-width: 640px) {
+    padding: 2rem;
+  }
+
+  @media (min-width: 768px) {
+    padding: 2rem;
+  }
+
+  @media (min-width: 1024px) {
+    padding: 40px 96px;
+  }
 }
