--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -12,6 +12,7 @@
   --color-primary-content: oklch(1 0 0);
   --color-base-300: oklch(0.94 0.0052 247.88);
   --color-neutral: oklch(0.6429 0 0);
+  --color-error: oklch(0.6576 0.229 28.72);
 }
 
 @utility container {
