--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -8,6 +8,7 @@
 
   --color-primary: oklch(0.5096 0.274811 263.5831);
   --color-secondary: oklch(0.8652 0.1768 90.38);
+  --color-secondary-content: oklch(0.6029 0.1603 90.38);
   --color-base-content: oklch(0 0 0);
   --color-primary-content: oklch(1 0 0);
   --color-base-100: oklch(1 0 0);
