--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,6 +1,27 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+@font-face {
+  font-family: "Delight";
+  src: url("@/assets/fonts/delight-regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Delight";
+  src: url("@/assets/fonts/delight-semibold.otf") format("opentype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Delight";
+  src: url("@/assets/fonts/delight-bold.otf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+}
+
 @plugin "daisyui/theme" {
   name: "mytheme";
   default: true;
@@ -40,6 +61,7 @@
   --font-inter: "Inter", "sans-serif";
   --font-poppins: "Poppins", "sans-serif";
   --font-oswald: "Oswald", "sans-serif";
+  --font-delight: "Delight", "sans-serif";
 }
 
 /* Hide scrollbars for all elements */
